--- a/quarto/precalc/vectors.qmd
+++ b/quarto/precalc/vectors.qmd
@@ -182,7 +182,7 @@ annotate!(plt, [(-1, .5, L"a"), (2.45, .5, L"b"), (1, 1.75, L"a-b")])
 imgfile = tempname() * ".png"
 png(plt, imgfile)
 
-caption = "The difference of two vectors can be visualized by placing the tail of one at the tip of the other"
+caption = "The difference of two vectors can be visualized by placing the tail of one at the tail of the other"
 
 ImageFile(imgfile, caption)
 ```
@@ -486,11 +486,11 @@ The `sort` function will rearrange the values in `𝒗`:
 sort(𝒗)
 ```
 
-The keyword argument, `rev=false` can be given to get values in decreasing order:
+The keyword argument, `rev=true` can be given to get values in decreasing order:
 
 
 ```{julia}
-sort(𝒗, rev=false)
+sort(𝒗, rev=true)
 ```
 
 For adding a new element to a vector the `push!` method can be used, as in
@@ -504,7 +504,7 @@ To append more than one value, the `append!` function can be used:
 
 
 ```{julia}
-append!(v1, [6,8,7])
+append!(𝒗, [6,8,7])
 ```
 
 These two functions modify or mutate the values stored within the vector `𝒗` that passed as an argument. In the `push!` example above, the value `5` is added to the vector of $4$ elements. In `Julia`, a convention is to name mutating functions with a trailing exclamation mark. (Again, these do not mutate the binding of `𝒗` to the container, but do mutate the contents of the container.) There are functions with mutating and non-mutating definitions, an example is `sort` and `sort!`.
