comment out pdf generation

--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -1555,7 +1555,7 @@ Compute the limit
 
 
 $$
-\lim_{x \rightarrow 0} \frac{\tan(x) - 24 * \tan(x/2)}{4  \sin(x) - 5  x}.
+\lim_{x \rightarrow 0} \frac{\tan(x) - 24  \tan(x/2)}{4  \sin(x) - 5  x}.
 $$
 
 ```{julia}
@@ -1658,7 +1658,7 @@ yesnoq("yes")
 The limit
 
 $$
-L= \lim_{x \rightarrow 0} \left(\frac{(a^x - x \log(a)}{b^x - x\log(b)}\right)^{1/x^2}
+L= \lim_{x \rightarrow 0} \left(\frac{a^x - x \log(a)}{b^x - x\log(b)}\right)^{1/x^2}
 $$
 
 For $a=3$ and $b=2$
