--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -670,6 +670,16 @@ radioq(choices, answ)
 
 ###### Question
 
+Consider the function `f(x) = airyai(x)`. What is the value of $f''(x) - x\cdot f(x)$ at $x=\pi$?
+
+```{julia}
+#| echo: false
+numericq(0; hint=raw"Any value of $x$ will produce the same answer")
+```
+
+
+###### Question
+
 
 Consider this graph:
 
