--- a/quarto/integral_vector_calculus/double_triple_integrals.qmd
+++ b/quarto/integral_vector_calculus/double_triple_integrals.qmd
@@ -716,6 +716,9 @@ endpoints(ys, x) = callf.(ys, Ref(x))
     xs)
 ```
 
+The one issue with the above is the tolerances should increase for each outer integration. Otherwise, a certain precision is expected for a noisier integrand. This isn't an issue for many integrands, but can become one.
+
+
 ##### Example
 
 
