--- a/quarto/integrals/area_between_curves.qmd
+++ b/quarto/integrals/area_between_curves.qmd
@@ -278,6 +278,20 @@ find_zero(m -> area(m) - 1, (0, 1))
 
 ##### Example
 
+In an early 2023 article appearing in the [New York Times](https://www.nytimes.com/2023/02/02/opinion/covid-pandemic-deaths.html) a discussion on *excess* deaths was presented. @fig-excess-deaths shows two curves from which the number of excess deaths can be computed.
+
+::: {#fig-excess-deaths}
+![Excess deaths](./figures/excess-deaths.png)
+
+Illustration of excess deaths. Figure from a Feb. 2023 New York Times article
+:::
+
+
+Consider the curve marked *Actual deaths*. The number of deaths per year is the sum over each day of the number of deaths per each day. Approximating this number with a curve and setting 1 day equal to 1 unit, the number of deaths is basically $\int_0^{365} d(t) dt$. This curve is *usually*, say, $u(t)$, so the expected number of deaths would be $\int_0^{365} u(t) dt$. The difference, $\int_0^{365} (d(t) - u(t))dt$ is interpreted as the number of *excess deaths*. This methodology has been used to estimate the true number of deaths attributable to the COVID-19 pandemic.
+
+
+##### Example
+
 
 Find the area bounded by the $x$ axis, the line $x-1$ and the function $\log(x+1)$.
 
@@ -740,11 +754,11 @@ Doubling the answer above gives a value that Galileo had struggled with for many
 #| echo: false
 imgfile="figures/companion-curve-bisects-rectangle.png"
 caption = """
-Roberval, avoiding a trignometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is ``2\\pi``.
+Roberval, avoiding a trignometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is `2pi`.
 """
 # ImageFile(:integrals, imgfile, caption)
 nothing
 ```
 
-![Roberval, avoiding a trignometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is ``2\\pi``.
+![Roberval, avoiding a trignometric integral, instead used symmetry to show that the area under the companion curve was half the area of the rectangle, which in this figure is $2\pi$.
 ](./figures/companion-curve-bisects-rectangle.png)
