--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -190,32 +190,46 @@ A right triangle has sides $a=11$ and $b=12$. Find the length of the   hypotenus
 
 ##### Example
 
-An article in the [Washington Post](https://www.washingtonpost.com/climate-environment/2022/09/19/ants-population-20-quadrillion/) describes estimates for the number of ants on earth.
+A overview of a research paper published  in [theconversation.com](https://theconversation.com/earth-harbours-20-000-000-000-000-000-ants-and-they-weigh-more-than-wild-birds-and-mammals-combined-190831) reviews six authors' work on estimating the number of ants currently on earth. This was covered in an
+article in the [Washington Post](https://www.washingtonpost.com/climate-environment/2022/09/19/ants-population-20-quadrillion/).
 
 
-They describe the number of ants two ways:
+The authors describe the number of ants two ways:
 
-* There are $20$ *trillion* ants.
-* There are $12$ megatons of ants
+* There are $20 \cdot 10^{15}$ (20 *quadrillion* or 20 thousand million millions) ants.
 
-With this how many ants make up a pound?
+* There is an estimated total biomass of $12$ megatons of *dry* carbon.
 
-Below we use the underscore as a separator, which is parsed as commas are to separate groups of numbers. The calculation is the number of ants divided by the number of pounds of ants (one megaton is $1$ million pounds):
 
-```{julia}
-20_000_000_000_000_000 / (1_000_000 * 12 * 2000)
-```
-
-Or not quite a million per pound.
-
-Using a pound is $2.2$ killograms or $2,200$ grams, we can this many ants per gram:
-
+The authors note in a supplement to their paper that over 15,700 species and subspecies of ants have been named. To get a good estimate, 489 studies of ant populations were combined spanning all continents and major habitats. The studies identify the number of *foraging* ants and combined yield the estimates for the *epigaeic ant abundance* ($3.02 \cdot 10^{15}$) and the *arboreal ant abundance* ($1.34\cdot 10^{15}$). Using an estimate of 22% of ants in a colony are foraging, they get the following estimate for the number of ants:
 
 ```{julia}
-20_000_000_000_000_000 / (1_000_000 * 12 * 2000) / 2200
+(3.02 * 10^15 + 1.34*10^15) * 100 / 22
 ```
 
-Such combinations will be easier to check for correctness when variable names are assigned the respective values.
+Shifting the decimal point, this gives a value rounded to $20\cdot 10^{15}$ ants.
+
+The authors used a value for the *dry weight* of an average (and representative) single ant. What was that value? (Which they indicate is perhaps unreliable,
+as, for example, small-bodied ants may be much more abundant than large-bodied ants).  We assume below that one "megaton" is $1$ million *metric* tons; a metric ton is $1,000$ kilograms; and a kilogram $1,000$ grams:
+
+```{julia}
+(12 * 1_000_000 * 1_000 * 1_000) / 20_000_000_000_000_000
+```
+
+Which translates to an *average* dry *carbon* weight of $0.6/1000$ grams, that is $0.6$ milligrams ($0.62$ mg C was actually used).
+
+ The authors write that insects are generally considered to have a dry weight of 30% wet weight, and a carbon weight of 50% dry weight, so the weight in grams of an *average* living ant would be multiplied by $2$ and then $10/3$:
+
+```{julia}
+(12 * 1_000_000 * 1_000 * 1_000) / 20_000_000_000_000_000 * (2 * 10/3)
+```
+
+That is 4 milligrams, or 250 ants per gram on average.
+
+Numeric combinations, as above, will be easier to check for correctness when variable names are assigned to the respective values.
+
+Using the underscore, as above, to separate groups of digits, is helpful, as an alternate to scientific notation, when working with large numbers.
+
 
 
 
@@ -1094,7 +1108,21 @@ answ=1
 radioq(choices, answ)
 ```
 
+##### Question
 
+[Sagan's](https://en.wiktionary.org/wiki/Sagan%27s_number) number is defined to be the total number of stars in the observable universe. How big is it? A *sextillion* is 7 groups of three 0's after a leading 1. One estimate is $10$ sextillion. How might this be entered into `Julia`? Select the one that *doesn't* work:
+
+```{julia}
+choices = [
+"`10*10^21`",
+"`10*10.0^21`",
+"`10e21`",
+"`1e22`",
+    "`10_000_000_000_000_000_000_000`"]
+explanation = "With an *integer* base, `10^21` overflows. For typical integers, onmly `10^18` is defined as expected. Once `10^19` is entered the mathematical value is larger the the `typemax` for `Int64` and so the value *wraps* around. The number written out with underscores to separate groups of 0s is parsed as an integer with 128 bits, not 64."
+buttonq(choices, 1; explanation=explanation)
+
+The estimate of 10 sextillion for Sagan's number was made in 1980, a more modern estimate is 30 times larger.
 
 ##### Question
 
