--- a/quarto/precalc/polynomial.qmd
+++ b/quarto/precalc/polynomial.qmd
@@ -461,6 +461,13 @@ plot!(x -> -x^5, -3,3, legend=false, xticks=false, yticks=false, subplot=4, titl
 
 ##### Example
 
+This graphic shows some of the above:
+
+[![you tube](https://img.youtube.com/vi/OFzqDatEvCo/3.jpg)](https://m.youtube.com/watch?v=OFzqDatEvCo)
+
+
+##### Example
+
 
 Suppose $p = a_n x^n + \cdots + a_1 x + a_0$ with $a_n > 0$. Then by the above, eventually for large $x > 0$ we have $p > 0$, as that is the behaviour of $a_n x^n$. Were $a_n < 0$, then eventually for large $x>0$, $p < 0$.
 
