--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -11,7 +11,7 @@ This is a set of notes for learning
 programming language with an easy to learn syntax that is well suited
 for this task.
 
-Read "[Getting started with Julia](./misc/getting_started_with_julia.html)" to learn how to install and customize  `Julia` for following along with these notes. Read "[Julia interfaces](.misc/julia_interfaces.html) to review different ways to interact with a `Julia` installation.
+Read "[Getting started with Julia](./misc/getting_started_with_julia.html)" to learn how to install and customize  `Julia` for following along with these notes. Read "[Julia interfaces](./misc/julia_interfaces.html) to review different ways to interact with a `Julia` installation.
 
 Since the mid 90s there has been a push to teach calculus using many
 different points of view. The
